# speech-processing-poc

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
poc/configs/: default.yaml
poc/output/: emotions.json  output.srt  output.vtt  report.json  scenes.json  transcript_fixed.json  transcript_raw.json
poc/prompts/: scene_summary.txt  typo_correction.txt
poc/src/: __main__.py  cli.py  llm.py
poc/src/asr/: audio_extract.py  transcribe.py
poc/src/correction/: typo_corrector.py
poc/src/emotion/: dimensional_emotion.py  fusion.py  prosody.py  speech_emotion.py  text_emotion.py
poc/src/io/: reader.py  subtitle_format.py  video_export.py  writer.py
poc/src/pipeline/: models.py  runner.py
poc/src/scene/: detector.py  summarizer.py
